runtime-configs/tpk8s/tanzu-changeme/httproute.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: CHANGE_ME
  annotations:
    healthcheck.gslb.tanzu.vmware.com/service: CHANGE_ME
    healthcheck.gslb.tanzu.vmware.com/path: /
    healthcheck.gslb.tanzu.vmware.com/port: "8080"
spec:
  parentRefs:
  - group: networking.tanzu.vmware.com
    kind: Entrypoint
    name: main
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: CHANGE_ME
      port: 8080
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
